--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myMat",
+  "name": "materialapp",
   "version": "1.1.1",
   "description": "myMat: An Ionic project",
   "dependencies": {
